1.1.x [2012-??-??]
 - Support adding 0 to forms, allowing sum([a])
 - Major memory savings and optimizations.
 - Some bugfixes.
 - Add perp operator.
 - Support nested tuple syntax like MixedElement((U,V),W)
1.0.0 [2011-12-07]
 - No changes since rc1.
1.0-rc1 [2011-11-22]
 - Added tests covering snippets from UFL chapter in FEniCS book
 - Added more unit tests
 - Added operators diag and diag_vector
 - Added geometric quantities cell.surface_area and cell.facet_area
 - Fixed rtruediv bug
 - Fixed bug with derivatives of elements of type Real with unspecified cell
1.0-beta3 [2011-10-26]
 - Added nabla_grad and nabla_div operators
 - Added error function erf(x)
 - Added bessel functions of first and second kind, normal and modified,
   bessel_J(nu, x), bessel_Y(nu, x), bessel_I(nu, x), bessel_K(nu, x)
 - Extended derivative() to allow indexed coefficient(s) as differentiation variable
 - Made *Constant use the 'Real' space instead of 'DG0'
 - Bugfix in adjoint where test and trial functions were in different spaces
 - Bugfix in replace where the argument to a grad was replaced with 0
 - Bugfix in reconstruction of tensor elements
 - Some other minor bugfixes
1.0-beta2 [2011-08-11]
 - Support c*form where c depends on a coefficient in a Real space
1.0-beta [2011-07-08]
 - Add script ufl-version
 - Added syntax for associating an arbitrary domain data object with a measure:
	dss = ds[boundaries]; M = f*dss(1) + g*dss(2)
 - Added new operators elem_mult, elem_div, elem_pow and elem_op for
   elementwise application of scalar operators to tensors of equal shape
 - Added condition operators And(lhs,rhs) and Or(lhs,rhs) and Not(cond)
 - Fixed support for symmetries in subelements of a mixed element
 - Add support for specifying derivatives of coefficients to derivative()
0.9.1 [2011-05-16]
 - Remove set_foo functions in finite element classes
 - Change license from GPL v3 or later to LGPL v3 or later