@@ -4,6 +4,7 @@
  - Some bugfixes.
  - Add perp operator.
  - Support nested tuple syntax like MixedElement((U,V),W)
+ - Allow outer(a, b, c, ...) by recursive application from left.
 1.0.0 [2011-12-07]
  - No changes since rc1.
 1.0-rc1 [2011-11-22]
